[package]
name = "escrow-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.14.10"
thiserror = "1.0.37"
spl-token = {version = "3.5.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
